# FingerKeyboard

./: .gitignore  Project hist.txt  README.md
Core/: FkCamera.h  FkCircleLocation.h  FkDimensionalProperty.h  FkFinger.cpp  FkFingerKeyboard.cpp  FkFingerKeyboard.h  FkHand.cpp  FkImageProcessor.h  FkKeyButtonProperty.h  FkMouse.cpp  FkMouseListener.cpp  FkMouserListener.h  FkPaperKeyboard.h  FkPaperKeyboardRecognizer.cpp  FkPaperKeyboard_TypeA.cpp  FkPostProcessor.h  FkPreProcessor.h  FkPreprocessor.cpp  FkProgramState.h  Main.cpp  realworldcorner.txt
src/Core/: FkCamera.cpp  FkCamera.h  FkCondition.cpp  FkCondition.h  FkDimensionalProperty.h  FkEventMessage.cpp  FkEventMessage.h  FkFingerKeyboard.cpp  FkFingerKeyboard.h  FkFingertipDetector.cpp  FkFingertipDetector.cpp.rej  FkHand.cpp  FkImageProcessor.cpp  FkImageProcessor.h  FkKeyButtonEventListener.cpp  FkMainWorker.cpp  FkMainWorker.h  FkMessage.h  FkMessageQueue.cpp  FkMouseListener.cpp  FkPaperKeyboard.h  FkPaperKeyboard_TypeA.cpp  FkPostProcessor.h  FkPreprocessor.cpp  (+7 more)
src/Double Camera/FingerKeyboard/: CMakeLists.txt  FkCamera.cpp  FkCamera.h  FkFingerKeyboard.cpp  FkFingerKeyboard.h  FkFingertipDetector.cpp  FkImageProcessor.cpp  FkImageProcessor.h  FkKeyButton.cpp  FkKeyButtonEventListener.cpp  FkKeyButtonProperty.h  FkMessage.cpp  FkMouseListener.cpp  FkMouserListener.h  FkPaperKeyboard.cpp  FkPaperKeyboard.h  FkPaperKeyboardRecognizer.cpp  FkPaperKeyboard_TypeA.cpp  FkPostprocessor.cpp  FkPostprocessor.h  FkPreprocessor.cpp  FkPreprocessor.h  FkProgramState.h  Main.cpp  MmalDualCamera.cpp  MmalDualCamera.h
(+152 files in other folders)
